# face-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  icp.py  pcd.py  read-bag.py  tsdf.py
align/: CMakeLists.txt
align/include/: AddFrameState.h  Application.h  EditorState.h  MergeState.h  PointCloud.h  Renderer.h  ReorderState.h  Scene.h  colormap.h  shaders.h
align/src/: AddFrameState.cpp  Application.cpp  EditorState.cpp  GlobalAlignState.cpp  MergeState.cpp  PointCloud.cpp  Renderer.cpp  Scene.cpp  Texture.cpp  colormap.cpp  shaders.cpp
base/: CMakeLists.txt
base/include/: BaseApplication.h  GLObjects.h  ShaderProgram.h  utilities.h
base/src/: BaseApplication.cpp  GLObjects.cpp  ShaderProgram.cpp  utilities.cpp
bones/: CMakeLists.txt
bones/include/: Bone.h  BonesApplication.h
bones/src/: Bone.cpp  BonesApplication.cpp  computeBoneWeights.cpp  main.cpp  shader.cpp
camera-tools/: realsense-acquire.py  realsense-read-bag.py  stereo-calibrate.py  stereo-make-depth.py  stereo-rectify.py
glad/include/glad/: glad.h
src/: AddFrameState.cpp  AddFrameState.h  AlignState.cpp  AlignState.h  Application.cpp  Application.h  EditorState.cpp  EditorState.h  GlobalAlignState.cpp  GlobalAlignState.h  LoadState.cpp  LoadState.h  MergeState.cpp  MergeState.h  NoiseRemovalState.cpp  NoiseRemovalState.h  PointCloud.cpp  PointCloud.h  Renderer.cpp  Renderer.h  ReorderState.cpp  Scene.cpp  Scene.h  Texture.h  TextureLabState.cpp  TextureLabState.h  colormap.cpp  main.cpp  shaders.cpp  shaders.h  utilities.cpp  utilities.h
